Update execution counts in Jupyter notebook for consistency and clarity

--- a/scripts/02_API_task.ipynb
+++ b/scripts/02_API_task.ipynb
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 131,
    "id": "f111446d",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 132,
    "id": "8654addf",
    "metadata": {},
    "outputs": [],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 133,
    "id": "02cdba3c",
    "metadata": {},
    "outputs": [
@@ -1077,7 +1077,7 @@
        "4     5          KOR           Republic of Korea    13       9       8"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 134,
    "id": "c2d012dc",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1098,7 @@
        "85"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,11 +1109,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
+   "id": "290f5f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['USA', 'CHN', 'GBR', 'RUS', 'KOR', 'GER', 'FRA', 'AUS', 'ITA',\n",
+       "       'HUN', 'JPN', 'IRI', 'NZL', 'UKR', 'CUB', 'ESP', 'JAM', 'CZE',\n",
+       "       'RSA', 'PRK', 'BRA', 'POL', 'ETH', 'KAZ', 'CRO', 'CAN', 'BLR',\n",
+       "       'KEN', 'DEN', 'ROU', 'AZE', 'SUI', 'NOR', 'LTU', 'TUN', 'SWE',\n",
+       "       'COL', 'MEX', 'GEO', 'IRL', 'ARG', 'SRB', 'SLO', 'TTO', 'TUR',\n",
+       "       'DOM', 'TPE', 'LAT', 'ALG', 'BRN', 'GRN', 'BAH', 'UGA', 'VEN',\n",
+       "       'EGY', 'IND', 'MGL', 'THA', 'BUL', 'FIN', 'INA', 'SVK', 'BEL',\n",
+       "       'ARM', 'EST', 'MAS', 'PUR', 'BOT', 'CYP', 'GAB', 'GUA', 'MNE',\n",
+       "       'POR', 'UZB', 'GRE', 'QAT', 'SGP', 'AFG', 'CMR', 'HKG', 'KSA',\n",
+       "       'KUW', 'MAR', 'TJK', 'VIE'], dtype=object)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.country_code.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "b45ffe4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>countryiso3code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>value</th>\n",
+       "      <th>scale</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>obs_status</th>\n",
+       "      <th>decimal</th>\n",
+       "      <th>indicator.id</th>\n",
+       "      <th>indicator.value</th>\n",
+       "      <th>country.id</th>\n",
+       "      <th>country.value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFE</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>SP.POP.TOTL</td>\n",
+       "      <td>Population, total</td>\n",
+       "      <td>ZH</td>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AFE</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>750503764.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>SP.POP.TOTL</td>\n",
+       "      <td>Population, total</td>\n",
+       "      <td>ZH</td>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AFE</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>731821393.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>SP.POP.TOTL</td>\n",
+       "      <td>Population, total</td>\n",
+       "      <td>ZH</td>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AFE</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>713090928.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>SP.POP.TOTL</td>\n",
+       "      <td>Population, total</td>\n",
+       "      <td>ZH</td>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AFE</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>694446100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>SP.POP.TOTL</td>\n",
+       "      <td>Population, total</td>\n",
+       "      <td>ZH</td>\n",
+       "      <td>Africa Eastern and Southern</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  countryiso3code  date        value scale unit obs_status  decimal  \\\n",
+       "0             AFE  2024          NaN                              0   \n",
+       "1             AFE  2023  750503764.0   NaN                        0   \n",
+       "2             AFE  2022  731821393.0   NaN                        0   \n",
+       "3             AFE  2021  713090928.0   NaN                        0   \n",
+       "4             AFE  2020  694446100.0   NaN                        0   \n",
+       "\n",
+       "  indicator.id    indicator.value country.id                country.value  \n",
+       "0  SP.POP.TOTL  Population, total         ZH  Africa Eastern and Southern  \n",
+       "1  SP.POP.TOTL  Population, total         ZH  Africa Eastern and Southern  \n",
+       "2  SP.POP.TOTL  Population, total         ZH  Africa Eastern and Southern  \n",
+       "3  SP.POP.TOTL  Population, total         ZH  Africa Eastern and Southern  \n",
+       "4  SP.POP.TOTL  Population, total         ZH  Africa Eastern and Southern  "
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gdp_pop_2012.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "id": "3df890e3",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['AFE', 'AFW', 'ARB', 'CSS', 'CEB', 'EAR', 'EAS', 'EAP', 'TEA',\n",
+       "       'EMU', 'ECS', 'ECA', 'TEC', 'EUU', 'FCS', 'HPC', '', 'IBD', 'IBT',\n",
+       "       'IDB', 'IDX', 'IDA', 'LTE', 'LCN', 'LAC', 'TLA', 'LDC', 'LMY',\n",
+       "       'MEA', 'MNA', 'TMN', 'MIC', 'NAC', 'OED', 'OSS', 'PSS', 'PST',\n",
+       "       'PRE', 'SST', 'SAS', 'TSA', 'SSF', 'SSA', 'TSS', 'WLD', 'AFG',\n",
+       "       'ALB', 'DZA', 'ASM', 'AND', 'AGO', 'ATG', 'ARG', 'ARM', 'ABW',\n",
+       "       'AUS', 'AUT', 'AZE', 'BHS', 'BHR', 'BGD', 'BRB', 'BLR', 'BEL',\n",
+       "       'BLZ', 'BEN', 'BMU', 'BTN', 'BOL', 'BIH', 'BWA', 'BRA', 'VGB',\n",
+       "       'BRN', 'BGR', 'BFA', 'BDI', 'CPV', 'KHM', 'CMR', 'CAN', 'CYM',\n",
+       "       'CAF', 'TCD', 'CHI', 'CHL', 'CHN', 'COL', 'COM', 'COD', 'COG',\n",
+       "       'CRI', 'CIV', 'HRV', 'CUB', 'CUW', 'CYP', 'CZE', 'DNK', 'DJI',\n",
+       "       'DMA', 'DOM', 'ECU', 'EGY', 'SLV', 'GNQ', 'ERI', 'EST', 'SWZ',\n",
+       "       'ETH', 'FRO', 'FJI', 'FIN', 'FRA', 'PYF', 'GAB', 'GMB', 'GEO',\n",
+       "       'DEU', 'GHA', 'GIB', 'GRC', 'GRL', 'GRD', 'GUM', 'GTM', 'GIN',\n",
+       "       'GNB', 'GUY', 'HTI', 'HND', 'HKG', 'HUN', 'ISL', 'IND', 'IDN',\n",
+       "       'IRN', 'IRQ', 'IRL', 'IMN', 'ISR', 'ITA', 'JAM', 'JPN', 'JOR',\n",
+       "       'KAZ', 'KEN', 'KIR', 'PRK', 'KOR', 'XKX', 'KWT', 'KGZ', 'LAO',\n",
+       "       'LVA', 'LBN', 'LSO', 'LBR', 'LBY', 'LIE', 'LTU', 'LUX', 'MAC',\n",
+       "       'MDG', 'MWI', 'MYS', 'MDV', 'MLI', 'MLT', 'MHL', 'MRT', 'MUS',\n",
+       "       'MEX', 'FSM', 'MDA', 'MCO', 'MNG', 'MNE', 'MAR', 'MOZ', 'MMR',\n",
+       "       'NAM', 'NRU', 'NPL', 'NLD', 'NCL', 'NZL', 'NIC', 'NER', 'NGA',\n",
+       "       'MKD', 'MNP', 'NOR', 'OMN', 'PAK', 'PLW', 'PAN', 'PNG', 'PRY',\n",
+       "       'PER', 'PHL', 'POL', 'PRT', 'PRI', 'QAT', 'ROU', 'RUS', 'RWA',\n",
+       "       'WSM', 'SMR', 'STP', 'SAU', 'SEN', 'SRB', 'SYC', 'SLE', 'SGP',\n",
+       "       'SXM', 'SVK', 'SVN', 'SLB', 'SOM', 'ZAF', 'SSD', 'ESP', 'LKA',\n",
+       "       'KNA', 'LCA', 'MAF', 'VCT', 'SDN', 'SUR', 'SWE', 'CHE', 'SYR',\n",
+       "       'TJK', 'TZA', 'THA', 'TLS', 'TGO', 'TON', 'TTO', 'TUN', 'TUR',\n",
+       "       'TKM', 'TCA', 'TUV', 'UGA', 'UKR', 'ARE', 'GBR', 'USA', 'URY',\n",
+       "       'UZB', 'VUT', 'VEN', 'VNM', 'VIR', 'PSE', 'YEM', 'ZMB', 'ZWE'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_gdp_pop_2012['countryiso3code'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "8427e168",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "262"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_gdp_pop_2012['countryiso3code'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "6c3404e3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list_gdp = df_gdp_pop_2012['countryiso3code'].unique()\n",
+    "list_medals = df.country_code.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "7a38391a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_elements = [item for item in list_gdp if item in list_medals]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "f1a7a410",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(common_elements)"
+   ]
   },
   {
    "cell_type": "markdown",
